# Scoot

./: CLAUDE.md  KDIRSTAT_ARCHITECTURE.md  PYTHON_PORT_ARCHITECTURE.md  README.md  config.yaml  extenions.md  pyproject.toml  run_server.py
docs/screenshots/: README.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DepthLimitControl.tsx  ExtensionCategories.tsx  ExtensionLegend.tsx  ExtensionStats.tsx  FilterSettings.tsx  ListView.tsx  ScanProgress.tsx  SizeFilter.tsx  TreeMap.tsx  TreeMapWebGL.tsx
frontend/src/hooks/: useScanWebSocket.ts
frontend/src/lib/: utils.ts
src/disk_usage_macos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/diskusage/: __init__.py
src/diskusage/cache/: __init__.py  store.py
src/diskusage/config/: settings.py
src/diskusage/model/: __init__.py  stats.py  tree.py
src/diskusage/scanner/: __init__.py  async_scanner.py  base.py  filters.py  local.py
src/diskusage/web/: __init__.py  api.py  scan_manager.py  websocket.py
src/diskusage/web/static/: index.html
src/diskusage/web/static/css/: style.css
src/diskusage/web/static/js/: app.js
tests/: conftest.py
tests/fixtures/: sample_trees.py
tests/unit/: test_scanner.py
