[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "disk-usage-macos"
version = "0.1.0"
description = "Python port of the KDirStat disk usage analyzer."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["disk", "kdirstat", "treemap"]
license = {text = "GPL-2.0-or-later"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: MacOS",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
